added my readMe with a giphy video showing the process and end result of this application.

--- a/output/myTeam.html
+++ b/output/myTeam.html
@@ -22,18 +22,18 @@
     </div>
     
     <div class="container ">
-        <div class="row row-cols-1 row-cols-md-1">
+        <div class="row row-cols-1 row-cols-md-3">
                 <div class="col">
 <div class="card employee-card m-5 border-primary">
     <div class="card-header bg-primary text-light">
-        <h2 class="card-title">l;kadsjlf</h2>
+        <h2 class="card-title">Christopher Rojas</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: al;jsdkf</li>
-            <li class="list-group-item">Email: <a href="mailto:;lajksdf">;lajksdf</a></li>
-            <li class="list-group-item">Office number: l;ajksdf</li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:chrisarojasz2003@gmail.com">chrisarojasz2003@gmail.com</a></li>
+            <li class="list-group-item">Office number: 2</li>
         </ul>
     </div>
 </div>
@@ -41,28 +41,28 @@
 <div class="col">
 <div class="card employee-card m-5 border-success">
     <div class="card-header bg-success text-light">
-        <h2 class="card-title">la;ksdjf</h2>
+        <h2 class="card-title">Claudia Escobar</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: l;ajsdf</li>
-            <li class="list-group-item">Email: <a href="mailto:;lkjasdf">;lkjasdf</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/l;aksjfd" target="_blank" rel="noopener noreferrer">l;aksjfd</a></li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:claudia@a2zeventcleaning.com">claudia@a2zeventcleaning.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/claudiaesc" target="_blank" rel="noopener noreferrer">claudiaesc</a></li>
         </ul>
     </div>
 </div>
 </div><div class="col">
 <div class="card employee-card m-5 border-warning">
     <div class="card-header bg-warning text-light">
-        <h2 class="card-title">;lakjdsfj</h2>
+        <h2 class="card-title">Caleb Rojas</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: ;lajdf</li>
-            <li class="list-group-item">Email: <a href="mailto:lkajsdf">lkajsdf</a></li>
-            <li class="list-group-item">School: l;kajsdf</li>
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:calbe@gmail.com">calbe@gmail.com</a></li>
+            <li class="list-group-item">School: Berkeley</li>
         </ul>
     </div>
 </div>
@@ -70,59 +70,14 @@
 <div class="col">
 <div class="card employee-card m-5 border-warning">
     <div class="card-header bg-warning text-light">
-        <h2 class="card-title">l;akjsdf</h2>
+        <h2 class="card-title">Cassius Rojas</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: ;lajksd</li>
-            <li class="list-group-item">Email: <a href="mailto:;aljksdf">;aljksdf</a></li>
-            <li class="list-group-item">School: ;aljksdf</li>
-        </ul>
-    </div>
-</div>
-</div>
-<div class="col">
-<div class="card employee-card m-5 border-warning">
-    <div class="card-header bg-warning text-light">
-        <h2 class="card-title">;laksjdf</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: ;alksdjf</li>
-            <li class="list-group-item">Email: <a href="mailto:;lakjsdf">;lakjsdf</a></li>
-            <li class="list-group-item">School: </li>
-        </ul>
-    </div>
-</div>
-</div>
-<div class="col">
-<div class="card employee-card m-5 border-warning">
-    <div class="card-header bg-warning text-light">
-        <h2 class="card-title">al;kjsdf</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: ;lajskdf</li>
-            <li class="list-group-item">Email: <a href="mailto:;ljkasdf">;ljkasdf</a></li>
-            <li class="list-group-item">School: ;laksdjf</li>
-        </ul>
-    </div>
-</div>
-</div>
-<div class="col">
-<div class="card employee-card m-5 border-warning">
-    <div class="card-header bg-warning text-light">
-        <h2 class="card-title"></h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: ljhas</li>
-            <li class="list-group-item">Email: <a href="mailto:;ljasdf">;ljasdf</a></li>
-            <li class="list-group-item">School: l;akdjsf</li>
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:cassius@gmail.com">cassius@gmail.com</a></li>
+            <li class="list-group-item">School: Berkeley</li>
         </ul>
     </div>
 </div>
@@ -130,53 +85,6 @@
 
         </div>
     </div>
-
-    <div class="container">
-        <div class="row row-cols-1 row-cols-md-3">
-            <div class="col mb-4">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                            content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="col mb-4">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                            content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-4">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                            content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col mb-4">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                            content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
 </body>
 
 </html>
